--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Density-Wars",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Real time peer to peer RTS game running on WebGL",
   "main": "main.js",
   "scripts": {
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/QuantumInformation/Density-Wars/issues"
   },
-  "homepage": "https://github.com/QuantumInformation/Density-Wars"
+  "homepage": "https://github.com/QuantumInformation/Density-Wars",
+  "dependencies": {
+    "babel-core": "^5.2.17",
+    "babylonjs": "^1.13.3",
+    "es6-module-loader": "^0.16.6"
+  }
 }
