--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Real time peer to peer RTS game running on WebGL",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc main.ts dist/"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,16 @@
     "url": "https://github.com/QuantumInformation/Density-Wars/issues"
   },
   "homepage": "https://github.com/QuantumInformation/Density-Wars",
-  "dependencies": {
-    "babel-core": "^5.2.17",
-    "babylonjs": "^1.13.3",
-    "es6-module-loader": "^0.16.6"
+  "devDependencies": {
+    "babylonjs": "^2.1.2",
+    "html-webpack-plugin": "^1.6.0",
+    "loader": "^0.1.6",
+    "typescript": "^1.5.3",
+    "typescript-loader": "^1.1.3",
+    "webpack": "^1.10.5",
+    "css-loader": "^0.15.6",
+    "style-loader": "^0.12.3"
+
+
   }
 }
