--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^1.6.0",
     "loader": "^2.0.0",
     "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.2",
     "ts-loader": "^0.7.2",
     "typescript": "^1.5.3",
     "webpack": "^1.11.0"
