--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.23.0",
     "html-webpack-plugin": "^1.6.0",
     "loader": "^2.0.0",
+    "peerjs": "^0.3.14",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.2",
     "ts-loader": "^0.7.2",
