--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   "homepage": "https://github.com/QuantumInformation/Density-Wars",
   "devDependencies": {
     "css-loader": "^0.23.0",
-    "html-webpack-plugin": "^1.6.0",
+    "html-webpack-plugin": "^2.21.0",
     "loader": "^2.0.0",
     "peerjs": "^0.3.14",
     "style-loader": "^0.13.0",
-    "stylus-loader": "^1.4.2",
-    "ts-loader": "^0.7.2",
+    "stylus-loader": "^2.1.1",
+    "ts-loader": "^0.8.2",
     "typescript": "^1.7.5",
     "webpack": "^1.11.0"
+  },
+  "dependencies": {
+    "babylonjs": "^2.3.0"
   }
 }
