--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "loader": "^2.0.0",
     "peerjs": "^0.3.14",
     "style-loader": "^0.13.0",
+    "stylus": "^0.54.5",
     "stylus-loader": "^2.1.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.7.5",
