--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --watch-polling"
+    "build": "webpack && cp node_modules/babylonjs/babylon.js server/public",
+    "start": "npm run build & node server/bin/www"
   },
   "repository": {
     "type": "git",
@@ -22,14 +23,33 @@
   },
   "homepage": "https://github.com/QuantumInformation/Density-Wars",
   "devDependencies": {
-    "css-loader": "^0.23.0",
-    "html-webpack-plugin": "^1.6.0",
-    "loader": "^2.0.0",
-    "peerjs": "^0.3.14",
-    "style-loader": "^0.13.0",
-    "stylus-loader": "^1.4.2",
-    "ts-loader": "^0.7.2",
-    "typescript": "^1.7.5",
-    "webpack": "^1.11.0"
+    "@types/node": "^7.0.4",
+    "awesome-typescript-loader": "^3.1.2",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "css-loader": "^0.27.1",
+    "express": "~4.15.2",
+    "file-loader": "^0.10.1",
+    "html-webpack-plugin": "https://github.com/ampedandwired/html-webpack-plugin",
+    "morgan": "^1.8.1",
+    "postcss-css-variables": "^0.7.0",
+    "postcss-custom-media": "^5.0.1",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.1.1",
+    "postcss-nested": "^1.0.0",
+    "serve-favicon": "~2.4.1",
+    "style-loader": "^0.16.0",
+    "typescript": "^2.0.3",
+    "url-loader": "^0.5.8",
+    "webpack": "2.3.1",
+    "webpack-build-notifier": "^0.1.13",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "babylonjs": "^2.3.0"
   }
 }
