--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "style-loader": "^0.16.0",
     "typescript": "^2.0.3",
     "url-loader": "^0.5.8",
-    "webpack": "2.3.1",
+    "webpack": "^2.3.1",
     "webpack-build-notifier": "^0.1.13",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
