--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Real time peer to peer RTS game running on WebGL",
   "main": "main.js",
   "scripts": {
+    "lint": "eslint src/*.ts src/**/*.ts src/**/**/*.ts test/*.js test/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack && cp node_modules/babylonjs/babylon.js server/public",
     "start": "npm run build & node server/bin/www"
@@ -23,6 +24,9 @@
   },
   "homepage": "https://github.com/QuantumInformation/Density-Wars",
   "devDependencies": {
+    "eslint": "^3.16.1",
+    "tslint-eslint-rules": "^3.4.0",
+    "typescript-eslint-parser": "^2.0.0",
     "@types/node": "^7.0.4",
     "awesome-typescript-loader": "^3.1.2",
     "babel-core": "^6.18.2",
