--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
   },
   "homepage": "https://github.com/QuantumInformation/Density-Wars",
   "devDependencies": {
-    "eslint": "^3.16.1",
-    "tslint-eslint-rules": "^3.4.0",
-    "typescript-eslint-parser": "^2.0.0",
     "@types/node": "^7.0.4",
     "awesome-typescript-loader": "^3.1.2",
     "babel-core": "^6.18.2",
@@ -35,6 +32,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.27.1",
+    "eslint": "^3.16.1",
     "express": "~4.15.2",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "https://github.com/ampedandwired/html-webpack-plugin",
@@ -46,7 +44,10 @@
     "postcss-nested": "^1.0.0",
     "serve-favicon": "~2.4.1",
     "style-loader": "^0.16.0",
+    "tslint": "^4.5.1",
+    "tslint-eslint-rules": "^3.4.0",
     "typescript": "^2.0.3",
+    "typescript-eslint-parser": "^2.0.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.1",
     "webpack-build-notifier": "^0.1.13",
